--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-xarrows",
-  "version": "1.6.1",
+  "version": "1.6.1-jes",
   "author": "Eliav Louski",
   "description": "Draw arrows (or lines) between components in React!",
   "keywords": [
